kube/ticket_service/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ticket-service
  labels:
    name:  ticket-service
spec:
  selector:
    matchLabels:
      name: ticket-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: ticket-service
    spec:
      containers:
      - image: gcr.io/webd-384707/ticket-service:0.1
        name: ticket-service
        resources:
          limits:
            cpu: "1000m"
            memory: "1024M"
          requests:
            cpu: "100m"
            memory: "1024M"
        ports:
        - containerPort: 3000
          name: ticket-service
        volumeMounts:
        - mountPath: /usr/src/app/.env
          subPath: .env
          name: env
      volumes:
        - name: env
          configMap:
            name: ticketforge
