kube/ticket_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
spec:
  selector:
    app: ticket-service
  ports:
  - port: 80
    targetPort: 3300
