kube/ticket_service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-service
  labels:
    name: ticket-service
spec:
  rules:
  - host: ticketforge.com/service
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ticket-service
            port: 
              number: 80
